deployment/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watch2play-backend
  labels:
    app: watch2play-backend
  namespace: watch2play
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watch2play-backend
  template:
    metadata:
      labels:
        app: watch2play-backend
    spec:
      serviceAccountName: watch2play-backend
      containers:
      - name: watch2play-backend
        image: 192.168.2.203:5000/watch2play-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: watch2play-backend
  namespace: watch2play
spec:
  type: LoadBalancer
  selector:
    app: watch2play-backend
  ports:
  - name: http
    port: 80
    targetPort: 8000
