deployment/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watch2play-frontend
  labels:
    app: watch2play-frontend
  namespace: watch2play
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watch2play-frontend
  template:
    metadata:
      labels:
        app: watch2play-frontend
    spec:
      containers:
      - name: watch2play-frontend
        image: 192.168.2.203:5000/watch2play-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: watch2play-frontend
  namespace: watch2play
spec:
  type: LoadBalancer
  selector:
    app: watch2play-frontend
  ports:
  - name: http
    port: 80
    targetPort: 3000
